--- a/src/main/resources/templates/blogpost/result.html
+++ b/src/main/resources/templates/blogpost/result.html
@@ -3,13 +3,38 @@
   <head>
     <title>Blog Site</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
+  
+  
   <body>
-    <h3>Blog Post Form</h3>
-    <p>Thank you for your submission!</p>
-    <h4>Blog Post:</h4>
-    <p th:text="${title}" />
-    <p th:text="${author}" />
-    <p th:text="${blogEntry}" />
+    <div th:replace="fragments/navbar :: navbar"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h2 th:text="${title}"></h2>
+            </div>
+            <div class="panel-body">
+              <strong>
+                <p th:text="${author}"></p>
+              </strong>
+              <p th:text="${blogEntry}"></p>
+            </div>
+            <div class="panel-footer">
+              
+            <a th:href="@{/}"><button class ="btn btn-success">Back to Home Page</button></a>
+            <a th:href="@{/blogposts/new}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
+
+            </div>
+          
+            </div>
+          </div>
+        </div>
+      </div>
+  
+  <script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="../../webjars/jquery/1.9.1/jquery.min.js"></script>
   </body>
 </html>
