--- a/src/main/resources/templates/blogpost/delete.html
+++ b/src/main/resources/templates/blogpost/delete.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Blog Site</title>
-    <meta ht[-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
+  <title>Blog Site</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <div th:replace="fragments/navbar :: navbar"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="panel-heading">
-                    <h1>Deleted blog post with id: <span th:text="${id}"></span></h1>
-            </div>
-            <div class="panel-footer">
+  <div th:replace="fragments/navbar :: navbar"></div>
+  <div class="container">
 
+    <div class="row">
+      <div class="col-xl">
+        <h3>This post has been deleted.</h3>
+      </div>
+    </div>
 
-                <a th:href="@{/}"><button class="btn btn-success">Back to Home Page</button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="../webjars/bootstrap/1.9.1/jquery.min.js"></script>
-    </body>
-
+    <div class="row">
+      <div class="col-md">
+        <a href="/">
+          <button class="btn btn-primary">Return Home</button>
+        </a>
+        <a href="/blogposts/new">
+          <button class="btn btn-secondary">Create Another Blog Post</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <script src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="../../webjars/jquery/1.9.1/jquery.min.js"></script>
+</body>
 
 </html>
